Update java-8 compatible changes
Co-authored-by: Mateusz Rzeszutek <mrzeszutek@splunk.com>